Prepare dark mode, fix layout bugs

--- a/src/components/Dots/Dots.scss
+++ b/src/components/Dots/Dots.scss
@@ -4,7 +4,6 @@
   right: 0;
   width: 100%;
   height: auto;
-  z-index: -100;
   top: -300px;
   min-width: 1400px;
 }
