--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,6 @@
 body {
   font-family: 'Anonymous Pro', monospace;
   overflow-y: hidden;
-  background-color: #6e6e6e;
 }
 
 /*
